# internal/tools/output_schemas.go
@@ -37,8 +37,9 @@ func buildTier1OutputSchemas() map[string]map[string]any {
 		"clockify_list_users":            envelopeSchemaFor[[]clockify.User]("clockify_list_users"),
 		"clockify_list_projects":         envelopeSchemaFor[[]ProjectView]("clockify_list_projects"),
 		"clockify_get_project":           envelopeSchemaFor[ProjectView]("clockify_get_project"),
-		"clockify_get_client":            envelopeSchemaFor[clockify.ClientEntity]("clockify_get_client"),
-		"clockify_list_clients":          envelopeSchemaFor[[]clockify.ClientEntity]("clockify_list_clients"),
+		"clockify_get_client":            envelopeSchemaFor[ClientView]("clockify_get_client"),
+		"clockify_list_clients":          envelopeSchemaFor[[]ClientView]("clockify_list_clients"),
+		"clockify_client_report":         envelopeSchemaFor[ClientReportView]("clockify_client_report"),
 		"clockify_list_tags":             envelopeSchemaFor[[]clockify.Tag]("clockify_list_tags"),
 		"clockify_get_tag":               envelopeSchemaFor[clockify.Tag]("clockify_get_tag"),
 		"clockify_update_tag":            envelopeSchemaFor[clockify.Tag]("clockify_update_tag"),
@@ -61,8 +62,8 @@ func buildTier1OutputSchemas() map[string]map[string]any {
 		"clockify_find_and_update_entry": envelopeSchemaFor[FindAndUpdateEntryData]("clockify_find_and_update_entry"),
 		"clockify_create_project":        envelopeSchemaFor[ProjectView]("clockify_create_project"),
 		"clockify_update_project":        envelopeSchemaFor[ProjectView]("clockify_update_project"),
-		"clockify_create_client":         envelopeSchemaFor[clockify.ClientEntity]("clockify_create_client"),
-		"clockify_update_client":         envelopeSchemaFor[clockify.ClientEntity]("clockify_update_client"),
+		"clockify_create_client":         envelopeSchemaFor[ClientView]("clockify_create_client"),
+		"clockify_update_client":         envelopeSchemaFor[ClientView]("clockify_update_client"),
 		"clockify_create_tag":            envelopeSchemaFor[clockify.Tag]("clockify_create_tag"),
 		"clockify_create_task":           envelopeSchemaFor[TaskView]("clockify_create_task"),
 		"clockify_start_timer":           envelopeSchemaFor[EntryView]("clockify_start_timer"),
